--- a/rtm-algorithm-coin/styles/algorithm-coin.scss
+++ b/rtm-algorithm-coin/styles/algorithm-coin.scss
@@ -6,16 +6,34 @@
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1200px !important;
+}
+
 html, body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Roboto", sans-serif;
 }
 
-body {
+.body-algorithm {
   background: #EBFAFF;
   display: grid;
+}
+
+body {
   position: relative;
+
+  a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    &:visited {
+      color: inherit;
+    }
+  }
 }
 
 .menu-active {
@@ -35,7 +53,7 @@ body {
   }
 }
 
-.page {
+.page-algo {
   &__menu {
     width: 100%;
     height: 100%;
@@ -173,7 +191,7 @@ body {
 }
 
 .rtm {
-  &__main-menu {
+  &__algorithm-coin-menu {
     &-wrapper {
       display: flex;
       justify-content: space-between;
@@ -225,6 +243,13 @@ body {
       font-size: 18px;
       font-style: normal;
       font-weight: 500;
+      &:hover {
+        color: rgba(124, 124, 124, 1);
+      }
+
+      &:active {
+        color: rgba(188, 188, 188, 1);
+      }
 
       @include for-tablet {
         font-size: 20px;
@@ -239,6 +264,7 @@ body {
 
     &-language {
       &-selector {
+        display: inline-block;
         position: relative;
         cursor: pointer;
         &:hover {
@@ -292,7 +318,7 @@ body {
     }
   }
 
-  &__main {
+  &__algorithm-coin {
     &-content-wrapper {
       margin-top: 32px;
       margin-bottom: 24px;
@@ -404,7 +430,7 @@ body {
         gap: 5px;
         padding: 6px 24px;
         border-radius: 12px;
-        border: 0.5px solid #000;
+        border: 1px solid #000;
         background: #FFF;
         cursor: pointer;
         &:hover {
@@ -513,7 +539,7 @@ body {
 
       &-item {
         border-radius: 16px;
-        border: 0.5px solid #000;
+        border: 1px solid #000;
         background: #FFF;
         text-align: center;
         padding: 12px 24px;
@@ -554,7 +580,7 @@ body {
     &-button {
       width: 50px;
       height: 55px;
-      border: 0.5px solid black;
+      border: 1px solid black;
       border-radius: 16px;
       display: flex;
       flex-direction: column;
@@ -588,6 +614,8 @@ body {
     }
 
     &-footer {
+      margin-top: auto;
+      width: 100%;
       align-self: flex-end;
       padding-bottom: 22px;
 
