--- a/rtm-asic/styles/asic.css
+++ b/rtm-asic/styles/asic.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1200px !important;
+}
+
 html, body {
   width: 100%;
   min-height: 100vh;
@@ -12,9 +16,20 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-body {
+.body-asic {
   background: #EBFAFF;
+}
+
+body {
   position: relative;
+}
+body a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+body a:visited {
+  color: inherit;
 }
 
 .menu-active {
@@ -34,7 +49,7 @@ body {
   background-size: cover;
 }
 
-.page__menu {
+.page-asic__menu {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -44,29 +59,29 @@ body {
   font-family: "Roboto", sans-serif;
 }
 @media (min-width: 768px) {
-  .page__menu {
+  .page-asic__menu {
     max-width: 408px;
   }
 }
 @media (min-width: 992px) {
-  .page__menu {
+  .page-asic__menu {
     max-width: 450px;
   }
 }
 @media (min-width: 1200px) {
-  .page__menu {
+  .page-asic__menu {
     max-width: 498px;
   }
 }
-.page__menu--active {
+.page-asic__menu--active {
   display: block;
 }
 @media (min-width: 768px) {
-  .page__menu--active {
+  .page-asic__menu--active {
     position: fixed;
   }
 }
-.page__menu-content {
+.page-asic__menu-content {
   height: 100%;
   width: 100%;
   padding: 32px 20px 0;
@@ -74,12 +89,12 @@ body {
   flex-direction: column;
 }
 @media (min-width: 768px) {
-  .page__menu-content {
+  .page-asic__menu-content {
     padding: 0;
     position: relative;
   }
 }
-.page__menu-content-close-btn-wrapper {
+.page-asic__menu-content-close-btn-wrapper {
   display: flex;
   width: auto;
   height: auto;
@@ -87,7 +102,7 @@ body {
   color: #777777;
 }
 @media (min-width: 768px) {
-  .page__menu-content-close-btn-wrapper {
+  .page-asic__menu-content-close-btn-wrapper {
     position: absolute;
     right: -52px;
     top: 16px;
@@ -101,27 +116,27 @@ body {
     cursor: pointer;
   }
 }
-.page__menu-content-close-btn-image {
+.page-asic__menu-content-close-btn-image {
   display: flex;
 }
-.page__menu-content-list {
+.page-asic__menu-content-list {
   padding: 0;
   list-style: none;
   margin-top: 46px;
   margin-bottom: 0;
 }
 @media (min-width: 768px) {
-  .page__menu-content-list {
+  .page-asic__menu-content-list {
     padding: 60px 48px 0 60px;
     margin-top: 0;
   }
 }
 @media (min-width: 1200px) {
-  .page__menu-content-list {
+  .page-asic__menu-content-list {
     padding: 130px 60px 0;
   }
 }
-.page__menu-content-list-item {
+.page-asic__menu-content-list-item {
   height: 48px;
   display: flex;
   align-items: center;
@@ -131,17 +146,17 @@ body {
   cursor: pointer;
 }
 @media (min-width: 768px) {
-  .page__menu-content-list-item {
+  .page-asic__menu-content-list-item {
     height: 64px;
     font-size: 24px;
     padding: 0 11px;
   }
-  .page__menu-content-list-item:hover {
+  .page-asic__menu-content-list-item:hover {
     border-radius: 8px;
     background: #ECECEC;
   }
 }
-.page__container {
+.page-asic__container {
   padding: 0 12px 0;
   width: 100%;
   height: 100%;
@@ -150,30 +165,30 @@ body {
   margin-bottom: 50px;
 }
 @media (min-width: 768px) {
-  .page__container {
+  .page-asic__container {
     padding: 0 36px 0;
     margin-bottom: 35px;
   }
 }
 @media (min-width: 992px) {
-  .page__container {
+  .page-asic__container {
     padding: 0 28px 0;
   }
 }
 @media (min-width: 1200px) {
-  .page__container {
+  .page-asic__container {
     padding: 0 12px 0;
     max-width: 1200px;
     margin: 0 auto 63px;
   }
 }
 @media (min-width: 1440px) {
-  .page__container {
+  .page-asic__container {
     padding: 0;
   }
 }
 
-.rtm__main-menu-wrapper {
+.rtm__asic-menu-wrapper {
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
@@ -183,69 +198,76 @@ body {
   font-weight: 500;
 }
 @media (min-width: 768px) {
-  .rtm__main-menu-wrapper {
+  .rtm__asic-menu-wrapper {
     padding: 0;
     font-size: 20px;
   }
 }
-.rtm__main-menu-mobile {
+.rtm__asic-menu-mobile {
   display: flex;
   align-items: center;
   gap: 4px;
 }
-.rtm__main-menu-mobile:hover {
+.rtm__asic-menu-mobile:hover {
   color: rgb(124, 124, 124);
 }
-.rtm__main-menu-mobile:active {
+.rtm__asic-menu-mobile:active {
   color: rgb(188, 188, 188);
 }
 @media (min-width: 768px) {
-  .rtm__main-menu-mobile {
+  .rtm__asic-menu-mobile {
     gap: 8px;
     padding-top: 41px;
     padding-bottom: 27px;
   }
 }
 @media (min-width: 992px) {
-  .rtm__main-menu-mobile {
+  .rtm__asic-menu-mobile {
     padding-top: 38px;
     padding-bottom: 30px;
     cursor: pointer;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-menu-mobile {
+  .rtm__asic-menu-mobile {
     padding-top: 41px;
     padding-bottom: 32px;
   }
 }
-.rtm__main-menu-logo {
+.rtm__asic-menu-logo {
   margin: 0;
   color: #000000;
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
 }
+.rtm__asic-menu-logo:hover {
+  color: rgb(124, 124, 124);
+}
+.rtm__asic-menu-logo:active {
+  color: rgb(188, 188, 188);
+}
 @media (min-width: 768px) {
-  .rtm__main-menu-logo {
+  .rtm__asic-menu-logo {
     font-size: 20px;
     padding-top: 38px;
     padding-bottom: 30px;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-menu-logo {
+  .rtm__asic-menu-logo {
     padding-bottom: 35px;
   }
 }
-.rtm__main-menu-language-selector {
+.rtm__asic-menu-language-selector {
+  display: inline-block;
   position: relative;
   cursor: pointer;
 }
-.rtm__main-menu-language-selector:hover {
+.rtm__asic-menu-language-selector:hover {
   color: rgb(124, 124, 124);
 }
-.rtm__main-menu-language-selector:first-of-type::after {
+.rtm__asic-menu-language-selector:first-of-type::after {
   content: "";
   position: absolute;
   height: 24px;
@@ -254,15 +276,15 @@ body {
   background: black;
 }
 @media (min-width: 1200px) {
-  .rtm__main-menu-language-selector:first-of-type::after {
+  .rtm__asic-menu-language-selector:first-of-type::after {
     left: 29px;
   }
 }
-.rtm__main-menu-language-selector-wrapper {
+.rtm__asic-menu-language-selector-wrapper {
   display: none;
 }
 @media (min-width: 768px) {
-  .rtm__main-menu-language-selector-wrapper {
+  .rtm__asic-menu-language-selector-wrapper {
     display: flex;
     gap: 15px;
     padding-top: 38px;
@@ -270,25 +292,25 @@ body {
   }
 }
 @media (min-width: 992px) {
-  .rtm__main-menu-language-selector-wrapper {
+  .rtm__asic-menu-language-selector-wrapper {
     padding-top: 36px;
     padding-bottom: 27px;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-menu-language-selector-wrapper {
+  .rtm__asic-menu-language-selector-wrapper {
     padding-top: 41px;
     padding-bottom: 32px;
   }
 }
-.rtm__main-menu-language-selector--active {
+.rtm__asic-menu-language-selector--active {
   background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-box-decoration-break: clone;
 }
-.rtm__main-content-wrapper {
+.rtm__asic-content-wrapper {
   margin-top: 32px;
   margin-bottom: 24px;
   padding: 12px 10px 24px;
@@ -299,30 +321,30 @@ body {
   background: #FFF;
 }
 @media (min-width: 768px) {
-  .rtm__main-content-wrapper {
+  .rtm__asic-content-wrapper {
     margin-top: 20px;
     margin-bottom: 32px;
     padding: 12px 22px 30px;
   }
 }
 @media (min-width: 992px) {
-  .rtm__main-content-wrapper {
+  .rtm__asic-content-wrapper {
     margin-bottom: 30px;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-content-wrapper {
+  .rtm__asic-content-wrapper {
     margin-top: 60px;
     margin-bottom: 50px;
     padding: 12px 38px 40px;
   }
 }
 @media (min-width: 1440px) {
-  .rtm__main-content-wrapper {
+  .rtm__asic-content-wrapper {
     padding: 12px 50px 40px;
   }
 }
-.rtm__main-progress-wrapper {
+.rtm__asic-progress-wrapper {
   display: flex;
   width: 100%;
   align-items: center;
@@ -330,22 +352,22 @@ body {
   gap: 23px;
 }
 @media (min-width: 768px) {
-  .rtm__main-progress-wrapper {
+  .rtm__asic-progress-wrapper {
     gap: 16px;
   }
 }
-.rtm__main-progress-title {
+.rtm__asic-progress-title {
   margin: 0;
   color: #777;
   font-size: 14px;
   font-weight: 500;
 }
 @media (min-width: 768px) {
-  .rtm__main-progress-title {
+  .rtm__asic-progress-title {
     font-size: 20px;
   }
 }
-.rtm__main-progress-bar {
+.rtm__asic-progress-bar {
   width: 100%;
   overflow: hidden;
   appearance: none;
@@ -354,56 +376,56 @@ body {
   border-radius: 6px;
   height: 16px;
 }
-.rtm__main-progress-bar::-webkit-progress-bar {
+.rtm__asic-progress-bar::-webkit-progress-bar {
   background: white;
   border-radius: 6px;
 }
-.rtm__main-progress-bar::-webkit-progress-value {
+.rtm__asic-progress-bar::-webkit-progress-value {
   background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
 }
-.rtm__main-progress-bar::-moz-progress-bar {
+.rtm__asic-progress-bar::-moz-progress-bar {
   background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
   appearance: none;
 }
-.rtm__main-asic-wrapper {
+.rtm__asic-asic-wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.rtm__main-asic-content {
+.rtm__asic-asic-content {
   display: flex;
   gap: 7.5px;
   justify-content: space-between;
 }
-.rtm__main-asic-content-button {
+.rtm__asic-asic-content-button {
   height: 73px;
   width: 40px;
   background: white;
   font-size: 40px;
   font-weight: 500;
   border-radius: 16px;
-  border: 0.5px solid #000;
+  border: 1px solid #000;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
 }
-.rtm__main-asic-content-button:hover {
+.rtm__asic-asic-content-button:hover {
   background: #F8F8F8;
 }
-.rtm__main-asic-content-button:active {
+.rtm__asic-asic-content-button:active {
   background: #F5F4F4;
 }
-.rtm__main-asic-content-button-text {
+.rtm__asic-asic-content-button-text {
   background: linear-gradient(90deg, rgb(255, 204, 126) 0%, rgb(50, 0, 250) 100%);
   background-clip: text;
   -webkit-box-decoration-break: clone;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.rtm__main-asic-content-value {
+.rtm__asic-asic-content-value {
   height: 73px;
   width: 114px;
   background: white;
@@ -415,12 +437,12 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   border-radius: 16px;
-  border: 0.5px solid #000;
+  border: 1px solid #000;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.rtm__main-asic-title {
+.rtm__asic-asic-title {
   margin: 20px 0 24px;
   color: #000;
   text-align: center;
@@ -429,28 +451,28 @@ body {
   font-weight: 500;
 }
 @media (min-width: 768px) {
-  .rtm__main-asic-title {
+  .rtm__asic-asic-title {
     margin: 14px 0 25px;
     font-size: 32px;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-asic-title {
+  .rtm__asic-asic-title {
     margin: 50px 0 25px;
     font-size: 60px;
   }
 }
-.rtm__main-buttons {
+.rtm__asic-buttons {
   display: flex;
   width: 170px;
   height: 55px;
   justify-content: space-between;
   margin: 0 auto 0;
 }
-.rtm__main-button {
+.rtm__asic-button {
   width: 50px;
   height: 55px;
-  border: 0.5px solid black;
+  border: 1px solid black;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -461,45 +483,47 @@ body {
   margin-bottom: 50px;
   cursor: pointer;
 }
-.rtm__main-button:hover {
+.rtm__asic-button:hover {
   background: #F8F8F8;
 }
-.rtm__main-button:active {
+.rtm__asic-button:active {
   background: #F5F4F4;
 }
-.rtm__main-button--left img {
+.rtm__asic-button--left img {
   position: relative;
   right: 2px;
 }
-.rtm__main-button--right img {
+.rtm__asic-button--right img {
   position: relative;
   left: 2px;
 }
-.rtm__main-footer {
+.rtm__asic-footer {
+  width: 100%;
+  margin-top: auto;
   align-self: flex-end;
   padding-bottom: 22px;
 }
 @media (min-width: 768px) {
-  .rtm__main-footer {
+  .rtm__asic-footer {
     padding-bottom: 30px;
   }
 }
 @media (min-width: 992px) {
-  .rtm__main-footer {
+  .rtm__asic-footer {
     padding-bottom: 28px;
   }
 }
 @media (min-width: 1200px) {
-  .rtm__main-footer {
+  .rtm__asic-footer {
     padding-bottom: 33px;
   }
 }
 @media (min-width: 1440px) {
-  .rtm__main-footer {
+  .rtm__asic-footer {
     padding-bottom: 28px;
   }
 }
-.rtm__main-footer-copyright {
+.rtm__asic-footer-copyright {
   margin: 0;
   font-size: 10px;
   font-weight: 500;
