--- a/rtm-asic/styles/asic.scss
+++ b/rtm-asic/styles/asic.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 1200px !important;
+}
+
 html, body {
   width: 100%;
   min-height: 100vh;
@@ -14,9 +18,21 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-body {
+.body-asic {
   background: #EBFAFF;
+}
+
+body {
   position: relative;
+
+  a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    &:visited {
+      color: inherit;
+    }
+  }
 }
 
 .menu-active {
@@ -36,7 +52,7 @@ body {
   }
 }
 
-.page {
+.page-asic {
   &__menu {
     width: 100%;
     height: 100%;
@@ -174,7 +190,7 @@ body {
 }
 
 .rtm {
-  &__main-menu {
+  &__asic-menu {
     &-wrapper {
       display: flex;
       justify-content: space-between;
@@ -225,6 +241,13 @@ body {
       font-size: 18px;
       font-style: normal;
       font-weight: 500;
+      &:hover {
+        color: rgba(124, 124, 124, 1);
+      }
+
+      &:active {
+        color: rgba(188, 188, 188, 1);
+      }
 
       @include for-tablet {
         font-size: 20px;
@@ -239,6 +262,7 @@ body {
 
     &-language {
       &-selector {
+        display: inline-block;
         position: relative;
         cursor: pointer;
         &:hover {
@@ -292,7 +316,7 @@ body {
     }
   }
 
-  &__main {
+  &__asic {
     &-content-wrapper {
       margin-top: 32px;
       margin-bottom: 24px;
@@ -393,7 +417,7 @@ body {
           font-size: 40px;
           font-weight: 500;
           border-radius: 16px;
-          border: 0.5px solid #000;
+          border: 1px solid #000;
           padding: 0;
           display: flex;
           align-items: center;
@@ -427,7 +451,7 @@ body {
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           border-radius: 16px;
-          border: 0.5px solid #000;
+          border: 1px solid #000;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -465,7 +489,7 @@ body {
     &-button {
       width: 50px;
       height: 55px;
-      border: 0.5px solid black;
+      border: 1px solid black;
       border-radius: 16px;
       display: flex;
       flex-direction: column;
@@ -498,6 +522,8 @@ body {
     }
 
     &-footer {
+      width: 100%;
+      margin-top: auto;
       align-self: flex-end;
       padding-bottom: 22px;
 
