--- a/rtm-price-list/styles/price-list.css
+++ b/rtm-price-list/styles/price-list.css
@@ -251,6 +251,7 @@ body a:visited {
   }
 }
 .rtm__price-list-menu-language-selector {
+  display: inline-block;
   position: relative;
   cursor: pointer;
 }
@@ -479,6 +480,7 @@ body a:visited {
 }
 .rtm__price-list-footer {
   width: 100%;
+  align-self: flex-end;
   margin-top: auto;
   padding-bottom: 22px;
 }
