--- a/rtm-search/styles/search.scss
+++ b/rtm-search/styles/search.scss
@@ -510,8 +510,9 @@ body {
     }
 
     &-footer {
-      width: 100%;
       margin-top: auto;
+      width: 100%;
+      align-self: flex-end;
       padding-bottom: 22px;
 
       @include for-tablet {
