--- a/rtm-main/styles/main.scss
+++ b/rtm-main/styles/main.scss
@@ -1,6 +1,5 @@
 @import "../../../rtm-offer/fonts/fonts.css";
 @import "mixins";
-@import "normalize.css";
 
 * {
   box-sizing: border-box;
@@ -168,9 +167,11 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 
     @include for-tablet {
       padding: 0 36px 0;
+      margin-bottom: 35px;
     }
 
     @include for-desktop {
@@ -180,7 +181,7 @@ body {
     @include for-desktop-large {
       padding: 0 12px 0;
       max-width: 1200px;
-      margin: 0 auto;
+      margin: 0 auto 63px;
     }
 
     @include for-desktop-xl {
@@ -501,19 +502,19 @@ body {
 
       @include for-tablet {
         display: block;
-        padding-bottom: 16px;
+        padding-bottom: 30px;
       }
 
       @include for-desktop {
-        padding-bottom: 39px;
+        padding-bottom: 28px;
       }
 
       @include for-desktop-large {
-        padding-bottom: 25px;
+        padding-bottom: 33px;
       }
 
       @include for-desktop-xl {
-        padding-bottom: 72px;
+        padding-bottom: 28px;
       }
 
       &-copyright {
