--- a/rtm-asic/styles/asic.css
+++ b/rtm-asic/styles/asic.css
@@ -1,5 +1,4 @@
 @import "../../../rtm-offer/fonts/fonts.css";
-@import "normalize.css";
 * {
   box-sizing: border-box;
 }
@@ -16,7 +15,7 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-.body-asic {
+.body-main {
   background: #EBFAFF;
 }
 
