--- a/rtm-asic/styles/asic.scss
+++ b/rtm-asic/styles/asic.scss
@@ -1,6 +1,5 @@
 @import "../../../rtm-offer/fonts/fonts.css";
 @import "mixins";
-@import "normalize.css";
 
 * {
   box-sizing: border-box;
@@ -18,7 +17,7 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-.body-asic {
+.body-main {
   background: #EBFAFF;
 }
 
@@ -171,7 +170,6 @@ body {
       padding: 0 36px 0;
       margin-bottom: 35px;
     }
-
 
     @include for-desktop {
       padding: 0 28px 0;
