--- a/rtm-offer-page/styles/offer.scss
+++ b/rtm-offer-page/styles/offer.scss
@@ -17,8 +17,8 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-.body-main {
-  background: #EBFAFF;
+.body-offer {
+  background: #fff;
 }
 
 body {
@@ -51,7 +51,7 @@ body {
   }
 }
 
-.main {
+.page-offer {
   &__menu {
     width: 100%;
     height: 100%;
@@ -159,26 +159,23 @@ body {
     }
   }
   &__container {
-    padding: 0 12px 0;
-    width: 100%;
-    height: 100%;
+    padding: 0 12px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 50px;
 
     @include for-tablet {
-      padding: 0 36px 0;
-      margin-bottom: 35px;
+      padding: 0 36px;
     }
 
     @include for-desktop {
-      padding: 0 28px 0;
+      padding: 0 27px;
     }
 
     @include for-desktop-large {
-      padding: 0 12px 0;
+      padding: 0 12px;
       max-width: 1200px;
-      margin: 0 auto 63px;
+      width: 100%;
+      margin: 0 auto;
     }
 
     @include for-desktop-xl {
@@ -188,7 +185,7 @@ body {
 }
 
 .rtm {
-  &__electricity-menu {
+  &__offer-menu {
     &-wrapper {
       display: flex;
       justify-content: space-between;
@@ -211,7 +208,6 @@ body {
       &:hover {
         color: rgba(124, 124, 124, 1);
       }
-
       &:active {
         color: rgba(188, 188, 188, 1);
       }
@@ -240,7 +236,6 @@ body {
       font-size: 18px;
       font-style: normal;
       font-weight: 500;
-      cursor: pointer;
       &:hover {
         color: rgba(124, 124, 124, 1);
       }
@@ -308,226 +303,57 @@ body {
         &--active {
           background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
           background-clip: text;
-          -webkit-box-decoration-break: clone;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
+          -webkit-box-decoration-break: clone;
         }
       }
     }
   }
 
-  &__electricity {
+  &__offer {
     &-content-wrapper {
       margin-top: 32px;
-      margin-bottom: 24px;
-      padding: 12px 10px 24px;
+      margin-bottom: 30px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      border-radius: 20px;
-      background: #FFF;
 
       @include for-tablet {
         margin-top: 20px;
-        margin-bottom: 32px;
-        padding: 12px 22px 30px;
-      }
-
-      @include for-desktop {
         margin-bottom: 30px;
       }
 
       @include for-desktop-large {
-        margin-top: 60px;
-        margin-bottom: 50px;
-        padding: 12px 38px 40px;
+        margin-top: 62px;
       }
 
       @include for-desktop-xl {
-        padding: 12px 50px 40px;
+        margin-top: 50px;
+        padding: 0;
       }
     }
 
-    &-progress {
+    &-title {
+      margin: 0 0 15px 0;
+      font-size: 24px;
+      font-weight: 700;
+      text-align: center;
+
+      @include for-tablet {
+        font-size: 32px;
+        font-weight: 500;
+        margin-bottom: 20px;
+      }
+
+      @include for-desktop-large {
+        font-size: 60px;
+        margin-bottom: 35px;
+      }
+    }
+
+    &-blocks {
       &-wrapper {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        flex-direction: column;
-        gap: 23px;
 
-        @include for-tablet {
-          gap: 16px;
-        }
-      }
-
-      &-title {
-        margin: 0;
-        color: #777;
-        font-size: 14px;
-        font-weight: 500;
-
-        @include for-tablet {
-          font-size: 20px;
-        }
-      }
-
-      &-bar {
-        width: 100%;
-        overflow: hidden;
-        appearance: none;
-        background: white;
-        border: 1px solid #EBFAFF;
-        border-radius: 6px;
-        height: 16px;
-
-        &::-webkit-progress-bar {
-          background: white;
-          border-radius: 6px;
-        }
-
-        &::-webkit-progress-value {
-          background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
-        }
-
-        &::-moz-progress-bar {
-          background: linear-gradient(90deg, #B276FF 0%, #FEAB00 97.75%);
-          appearance: none;
-        }
-      }
-    }
-
-    &-electricity {
-      &-wrapper {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      &-content {
-        display: flex;
-        gap: 7.5px;
-        justify-content: space-between;
-
-        &-button {
-          height: 73px;
-          width: 40px;
-          background: white;
-          font-size: 40px;
-          font-weight: 500;
-          border-radius: 16px;
-          border: 1px solid #000;
-          padding: 0;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          &:hover {
-            background: #F8F8F8;
-          }
-          &:active {
-            background: #F5F4F4;
-          }
-
-          &-text {
-            background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
-            background-clip: text;
-            -webkit-box-decoration-break: clone;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
-        }
-
-        &-value {
-          height: 73px;
-          width: 114px;
-          background: white;
-          font-size: 40px;
-          font-weight: 500;
-          background: linear-gradient(90deg, rgba(255,204,126,1) 0%, rgba(50,0,250,1) 100%);
-          background-clip: text;
-          -webkit-box-decoration-break: clone;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          border-radius: 16px;
-          border: 1px solid #000;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-      }
-
-      &-subtitle {
-        margin-top: 10px;
-        margin-bottom: 0;
-        color: #000;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 500;
-        opacity: 0.3;
-      }
-
-      &-title {
-        margin: 20px 0 24px;
-        color: #000;
-        text-align: center;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 500;
-
-        @include for-tablet {
-          margin: 14px 0 25px;
-          font-size: 32px;
-        }
-
-        @include for-desktop-large {
-          margin: 50px 0 25px;
-          font-size: 60px;
-        }
-      }
-    }
-
-    &-buttons {
-      display: flex;
-      width: 170px;
-      height: 55px;
-      justify-content: space-between;
-      margin: 0 auto 0;
-    }
-
-    &-button {
-      width: 50px;
-      height: 55px;
-      border: 1px solid black;
-      border-radius: 16px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: white;
-      padding: 0;
-      margin-bottom: 50px;
-      cursor: pointer;
-      &:hover {
-        background: #F8F8F8;
-      }
-      &:active {
-        background: #F5F4F4;
-      }
-
-      &--left {
-        img {
-          position: relative;
-          right: 2px;
-        }
-      }
-
-      &--right {
-        img {
-          position: relative;
-          left: 2px;
-        }
       }
     }
 
