--- a/rtm-search/styles/search.scss
+++ b/rtm-search/styles/search.scss
@@ -1,6 +1,6 @@
 @import "../../../rtm-offer/fonts/search-fonts.css";
 @import "mixins";
-@import "normalize.css";
+
 
 * {
   box-sizing: border-box;
@@ -18,11 +18,11 @@ html, body {
   max-width: 1200px !important;
 }
 
-body {
+.body-main {
   background: #EBFAFF;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
+}
+
+body {
   position: relative;
 
   a {
@@ -163,13 +163,14 @@ body {
     padding: 0 12px 0;
     width: 100%;
     height: 100%;
-    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
 
     @include for-tablet {
       padding: 0 36px 0;
       margin-bottom: 35px;
     }
-
 
     @include for-desktop {
       padding: 0 28px 0;
