--- a/rtm-algorithm-coin/styles/algorithm-coin.css
+++ b/rtm-algorithm-coin/styles/algorithm-coin.css
@@ -48,7 +48,7 @@ body a:visited {
   background-size: cover;
 }
 
-.page-algo__menu {
+.main__menu {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -58,29 +58,29 @@ body a:visited {
   font-family: "Roboto", sans-serif;
 }
 @media (min-width: 768px) {
-  .page-algo__menu {
+  .main__menu {
     max-width: 408px;
   }
 }
 @media (min-width: 992px) {
-  .page-algo__menu {
+  .main__menu {
     max-width: 450px;
   }
 }
 @media (min-width: 1200px) {
-  .page-algo__menu {
+  .main__menu {
     max-width: 498px;
   }
 }
-.page-algo__menu--active {
+.main__menu--active {
   display: block;
 }
 @media (min-width: 768px) {
-  .page-algo__menu--active {
+  .main__menu--active {
     position: fixed;
   }
 }
-.page-algo__menu-content {
+.main__menu-content {
   height: 100%;
   width: 100%;
   padding: 32px 20px 0;
@@ -88,12 +88,12 @@ body a:visited {
   flex-direction: column;
 }
 @media (min-width: 768px) {
-  .page-algo__menu-content {
+  .main__menu-content {
     padding: 0;
     position: relative;
   }
 }
-.page-algo__menu-content-close-btn-wrapper {
+.main__menu-content-close-btn-wrapper {
   display: flex;
   width: auto;
   height: auto;
@@ -101,7 +101,7 @@ body a:visited {
   color: #777777;
 }
 @media (min-width: 768px) {
-  .page-algo__menu-content-close-btn-wrapper {
+  .main__menu-content-close-btn-wrapper {
     position: absolute;
     right: -52px;
     top: 16px;
@@ -115,27 +115,27 @@ body a:visited {
     cursor: pointer;
   }
 }
-.page-algo__menu-content-close-btn-image {
+.main__menu-content-close-btn-image {
   display: flex;
 }
-.page-algo__menu-content-list {
+.main__menu-content-list {
   padding: 0;
   list-style: none;
   margin-top: 46px;
   margin-bottom: 0;
 }
 @media (min-width: 768px) {
-  .page-algo__menu-content-list {
+  .main__menu-content-list {
     padding: 60px 48px 0 60px;
     margin-top: 0;
   }
 }
 @media (min-width: 1200px) {
-  .page-algo__menu-content-list {
+  .main__menu-content-list {
     padding: 130px 60px 0;
   }
 }
-.page-algo__menu-content-list-item {
+.main__menu-content-list-item {
   height: 48px;
   display: flex;
   align-items: center;
@@ -145,17 +145,17 @@ body a:visited {
   cursor: pointer;
 }
 @media (min-width: 768px) {
-  .page-algo__menu-content-list-item {
+  .main__menu-content-list-item {
     height: 64px;
     font-size: 24px;
     padding: 0 11px;
   }
-  .page-algo__menu-content-list-item:hover {
+  .main__menu-content-list-item:hover {
     border-radius: 8px;
     background: #ECECEC;
   }
 }
-.page-algo__container {
+.main__container {
   padding: 0 12px 0;
   width: 100%;
   height: 100%;
@@ -164,27 +164,59 @@ body a:visited {
   margin-bottom: 50px;
 }
 @media (min-width: 768px) {
-  .page-algo__container {
+  .main__container {
     padding: 0 36px 0;
     margin-bottom: 35px;
   }
 }
 @media (min-width: 992px) {
-  .page-algo__container {
+  .main__container {
     padding: 0 28px 0;
   }
 }
 @media (min-width: 1200px) {
-  .page-algo__container {
+  .main__container {
     padding: 0 12px 0;
     max-width: 1200px;
     margin: 0 auto 63px;
   }
 }
 @media (min-width: 1440px) {
-  .page-algo__container {
+  .main__container {
     padding: 0;
   }
+}
+.main__footer {
+  margin-top: auto;
+  width: 100%;
+  align-self: flex-end;
+  padding-bottom: 22px;
+}
+@media (min-width: 768px) {
+  .main__footer {
+    padding-bottom: 21px;
+  }
+}
+@media (min-width: 992px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+@media (min-width: 1200px) {
+  .main__footer {
+    padding-bottom: 33px;
+  }
+}
+@media (min-width: 1440px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+.main__footer-copyright {
+  margin: 0;
+  font-size: 10px;
+  font-weight: 500;
+  text-align: center;
 }
 
 .rtm__algorithm-coin-menu-wrapper {
@@ -585,38 +617,6 @@ body a:visited {
 .rtm__algorithm-coin-button--right img {
   position: relative;
   left: 2px;
-}
-.rtm__algorithm-coin-footer {
-  margin-top: auto;
-  width: 100%;
-  align-self: flex-end;
-  padding-bottom: 22px;
-}
-@media (min-width: 768px) {
-  .rtm__algorithm-coin-footer {
-    padding-bottom: 21px;
-  }
-}
-@media (min-width: 992px) {
-  .rtm__algorithm-coin-footer {
-    padding-bottom: 28px;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__algorithm-coin-footer {
-    padding-bottom: 33px;
-  }
-}
-@media (min-width: 1440px) {
-  .rtm__algorithm-coin-footer {
-    padding-bottom: 28px;
-  }
-}
-.rtm__algorithm-coin-footer-copyright {
-  margin: 0;
-  font-size: 10px;
-  font-weight: 500;
-  text-align: center;
 }
 
 /*# sourceMappingURL=algorithm-coin.css.map */
