--- a/rtm-asic/styles/asic.scss
+++ b/rtm-asic/styles/asic.scss
@@ -51,7 +51,7 @@ body {
   }
 }
 
-.page-asic {
+.main {
   &__menu {
     width: 100%;
     height: 100%;
@@ -183,6 +183,35 @@ body {
 
     @include for-desktop-xl {
       padding: 0;
+    }
+  }
+  &__footer {
+    margin-top: auto;
+    width: 100%;
+    align-self: flex-end;
+    padding-bottom: 22px;
+
+    @include for-tablet {
+      padding-bottom: 21px;
+    }
+
+    @include for-desktop {
+      padding-bottom: 28px;
+    }
+
+    @include for-desktop-large {
+      padding-bottom: 33px;
+    }
+
+    @include for-desktop-xl {
+      padding-bottom: 28px;
+    }
+
+    &-copyright {
+      margin: 0;
+      font-size: 10px;
+      font-weight: 500;
+      text-align: center;
     }
   }
 }
@@ -516,36 +545,6 @@ body {
           position: relative;
           left: 2px;
         }
-      }
-    }
-
-    &-footer {
-      width: 100%;
-      margin-top: auto;
-      align-self: flex-end;
-      padding-bottom: 22px;
-
-      @include for-tablet {
-        padding-bottom: 30px;
-      }
-
-      @include for-desktop {
-        padding-bottom: 28px;
-      }
-
-      @include for-desktop-large {
-        padding-bottom: 33px;
-      }
-
-      @include for-desktop-xl {
-        padding-bottom: 28px;
-      }
-
-      &-copyright {
-        margin: 0;
-        font-size: 10px;
-        font-weight: 500;
-        text-align: center;
       }
     }
   }
