--- a/rtm-electricity/styles/electricity.css
+++ b/rtm-electricity/styles/electricity.css
@@ -186,6 +186,38 @@ body a:visited {
     padding: 0;
   }
 }
+.main__footer {
+  width: 100%;
+  margin-top: auto;
+  align-self: flex-end;
+  padding-bottom: 22px;
+}
+@media (min-width: 768px) {
+  .main__footer {
+    padding-bottom: 30px;
+  }
+}
+@media (min-width: 992px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+@media (min-width: 1200px) {
+  .main__footer {
+    padding-bottom: 33px;
+  }
+}
+@media (min-width: 1440px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+.main__footer-copyright {
+  margin: 0;
+  font-size: 10px;
+  font-weight: 500;
+  text-align: center;
+}
 
 .rtm__electricity-menu-wrapper {
   display: flex;
@@ -505,38 +537,6 @@ body a:visited {
 .rtm__electricity-button--right img {
   position: relative;
   left: 2px;
-}
-.rtm__electricity-footer {
-  width: 100%;
-  margin-top: auto;
-  align-self: flex-end;
-  padding-bottom: 22px;
-}
-@media (min-width: 768px) {
-  .rtm__electricity-footer {
-    padding-bottom: 30px;
-  }
-}
-@media (min-width: 992px) {
-  .rtm__electricity-footer {
-    padding-bottom: 28px;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__electricity-footer {
-    padding-bottom: 33px;
-  }
-}
-@media (min-width: 1440px) {
-  .rtm__electricity-footer {
-    padding-bottom: 28px;
-  }
-}
-.rtm__electricity-footer-copyright {
-  margin: 0;
-  font-size: 10px;
-  font-weight: 500;
-  text-align: center;
 }
 
 /*# sourceMappingURL=electricity.css.map */
