--- a/rtm-electricity/styles/electricity.scss
+++ b/rtm-electricity/styles/electricity.scss
@@ -185,6 +185,35 @@ body {
       padding: 0;
     }
   }
+  &__footer {
+    width: 100%;
+    margin-top: auto;
+    align-self: flex-end;
+    padding-bottom: 22px;
+
+    @include for-tablet {
+      padding-bottom: 30px;
+    }
+
+    @include for-desktop {
+      padding-bottom: 28px;
+    }
+
+    @include for-desktop-large {
+      padding-bottom: 33px;
+    }
+
+    @include for-desktop-xl {
+      padding-bottom: 28px;
+    }
+
+    &-copyright {
+      margin: 0;
+      font-size: 10px;
+      font-weight: 500;
+      text-align: center;
+    }
+  }
 }
 
 .rtm {
@@ -528,36 +557,6 @@ body {
           position: relative;
           left: 2px;
         }
-      }
-    }
-
-    &-footer {
-      width: 100%;
-      margin-top: auto;
-      align-self: flex-end;
-      padding-bottom: 22px;
-
-      @include for-tablet {
-        padding-bottom: 30px;
-      }
-
-      @include for-desktop {
-        padding-bottom: 28px;
-      }
-
-      @include for-desktop-large {
-        padding-bottom: 33px;
-      }
-
-      @include for-desktop-xl {
-        padding-bottom: 28px;
-      }
-
-      &-copyright {
-        margin: 0;
-        font-size: 10px;
-        font-weight: 500;
-        text-align: center;
       }
     }
   }
