--- a/rtm-main/styles/main.css
+++ b/rtm-main/styles/main.css
@@ -189,6 +189,38 @@ body {
     padding: 0;
   }
 }
+.main__footer {
+  margin-top: auto;
+  width: 100%;
+  align-self: flex-end;
+  padding-bottom: 22px;
+}
+@media (min-width: 768px) {
+  .main__footer {
+    padding-bottom: 21px;
+  }
+}
+@media (min-width: 992px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+@media (min-width: 1200px) {
+  .main__footer {
+    padding-bottom: 33px;
+  }
+}
+@media (min-width: 1440px) {
+  .main__footer {
+    padding-bottom: 28px;
+  }
+}
+.main__footer-copyright {
+  margin: 0;
+  font-size: 10px;
+  font-weight: 500;
+  text-align: center;
+}
 
 .rtm__main-menu-wrapper {
   display: flex;
@@ -491,45 +523,6 @@ body {
 @media (min-width: 1440px) {
   .rtm__main-btn {
     top: -167px;
-  }
-}
-.rtm__main-footer {
-  display: none;
-  margin-top: auto;
-  width: 100%;
-  align-self: flex-end;
-}
-@media (min-width: 768px) {
-  .rtm__main-footer {
-    display: block;
-    padding-bottom: 30px;
-  }
-}
-@media (min-width: 992px) {
-  .rtm__main-footer {
-    padding-bottom: 28px;
-  }
-}
-@media (min-width: 1200px) {
-  .rtm__main-footer {
-    padding-bottom: 33px;
-  }
-}
-@media (min-width: 1440px) {
-  .rtm__main-footer {
-    padding-bottom: 28px;
-  }
-}
-.rtm__main-footer-copyright {
-  display: none;
-}
-@media (min-width: 768px) {
-  .rtm__main-footer-copyright {
-    display: block;
-    margin: 0;
-    font-size: 10px;
-    font-weight: 500;
-    text-align: center;
   }
 }
 
