--- a/rtm-main/styles/main.scss
+++ b/rtm-main/styles/main.scss
@@ -188,6 +188,35 @@ body {
       padding: 0;
     }
   }
+  &__footer {
+    margin-top: auto;
+    width: 100%;
+    align-self: flex-end;
+    padding-bottom: 22px;
+
+    @include for-tablet {
+      padding-bottom: 21px;
+    }
+
+    @include for-desktop {
+      padding-bottom: 28px;
+    }
+
+    @include for-desktop-large {
+      padding-bottom: 33px;
+    }
+
+    @include for-desktop-xl {
+      padding-bottom: 28px;
+    }
+
+    &-copyright {
+      margin: 0;
+      font-size: 10px;
+      font-weight: 500;
+      text-align: center;
+    }
+  }
 }
 
 .rtm {
@@ -491,42 +520,6 @@ body {
 
       @include for-desktop-xl {
         top: -167px;
-      }
-    }
-
-    &-footer {
-      display: none;
-      margin-top: auto;
-      width: 100%;
-      align-self: flex-end;
-
-      @include for-tablet {
-        display: block;
-        padding-bottom: 30px;
-      }
-
-      @include for-desktop {
-        padding-bottom: 28px;
-      }
-
-      @include for-desktop-large {
-        padding-bottom: 33px;
-      }
-
-      @include for-desktop-xl {
-        padding-bottom: 28px;
-      }
-
-      &-copyright {
-        display: none;
-
-        @include for-tablet {
-          display: block;
-          margin: 0;
-          font-size: 10px;
-          font-weight: 500;
-          text-align: center;
-        }
       }
     }
   }
