--- a/rtm-search/styles/search.scss
+++ b/rtm-search/styles/search.scss
@@ -52,7 +52,7 @@ body {
   }
 }
 
-.page {
+.main {
   &__menu {
     width: 100%;
     height: 100%;
@@ -184,6 +184,35 @@ body {
 
     @include for-desktop-xl {
       padding: 0;
+    }
+  }
+  &__footer {
+    margin-top: auto;
+    width: 100%;
+    align-self: flex-end;
+    padding-bottom: 22px;
+
+    @include for-tablet {
+      padding-bottom: 21px;
+    }
+
+    @include for-desktop {
+      padding-bottom: 28px;
+    }
+
+    @include for-desktop-large {
+      padding-bottom: 33px;
+    }
+
+    @include for-desktop-xl {
+      padding-bottom: 28px;
+    }
+
+    &-copyright {
+      margin: 0;
+      font-size: 10px;
+      font-weight: 500;
+      text-align: center;
     }
   }
 }
@@ -507,36 +536,6 @@ body {
           margin: 50px 0 25px;
           font-size: 60px;
         }
-      }
-    }
-
-    &-footer {
-      margin-top: auto;
-      width: 100%;
-      align-self: flex-end;
-      padding-bottom: 22px;
-
-      @include for-tablet {
-        padding-bottom: 30px;
-      }
-
-      @include for-desktop {
-        padding-bottom: 28px;
-      }
-
-      @include for-desktop-large {
-        padding-bottom: 33px;
-      }
-
-      @include for-desktop-xl {
-        padding-bottom: 28px;
-      }
-
-      &-copyright {
-        margin: 0;
-        font-size: 10px;
-        font-weight: 500;
-        text-align: center;
       }
     }
   }
